# ransomware

./: .gitignore  Makefile  README.md  ransom.cpp  wipe.cpp
AES256/: AES256.cpp  AES256_Base.cpp  AES256_PRNG.cpp
client/: CMakeLists.txt  Makefile
client/src/: client.cpp  crypto.cpp  crypto.hpp  file.cpp  file.hpp  ransom.cpp  traverse.cpp  traverse.hpp  unransom.cpp  wipe.hpp
server/: server.py
