cmake_minimum_required(VERSION 3.7)
project(client-ransom)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        include/cryptopp/3way.cpp
        include/cryptopp/3way.h
        include/cryptopp/adler32.cpp
        include/cryptopp/adler32.h
        include/cryptopp/aes.h
        include/cryptopp/algebra.cpp
        include/cryptopp/algebra.h
        include/cryptopp/algparam.cpp
        include/cryptopp/algparam.h
        include/cryptopp/arc4.cpp
        include/cryptopp/arc4.h
        include/cryptopp/argnames.h
        include/cryptopp/asn.cpp
        include/cryptopp/asn.h
        include/cryptopp/authenc.cpp
        include/cryptopp/authenc.h
        include/cryptopp/base32.cpp
        include/cryptopp/base32.h
        include/cryptopp/base64.cpp
        include/cryptopp/base64.h
        include/cryptopp/basecode.cpp
        include/cryptopp/basecode.h
        include/cryptopp/bfinit.cpp
        include/cryptopp/blake2.cpp
        include/cryptopp/blake2.h
        include/cryptopp/blowfish.cpp
        include/cryptopp/blowfish.h
        include/cryptopp/blumshub.cpp
        include/cryptopp/blumshub.h
        include/cryptopp/camellia.cpp
        include/cryptopp/camellia.h
        include/cryptopp/cast.cpp
        include/cryptopp/cast.h
        include/cryptopp/casts.cpp
        include/cryptopp/cbcmac.cpp
        include/cryptopp/cbcmac.h
        include/cryptopp/ccm.cpp
        include/cryptopp/ccm.h
        include/cryptopp/chacha.cpp
        include/cryptopp/chacha.h
        include/cryptopp/channels.cpp
        include/cryptopp/channels.h
        include/cryptopp/cmac.cpp
        include/cryptopp/cmac.h
        include/cryptopp/config.h
        include/cryptopp/cpu.cpp
        include/cryptopp/cpu.h
        include/cryptopp/crc.cpp
        include/cryptopp/crc.h
        include/cryptopp/cryptlib.cpp
        include/cryptopp/cryptlib.h
        include/cryptopp/default.cpp
        include/cryptopp/default.h
        include/cryptopp/des.cpp
        include/cryptopp/des.h
        include/cryptopp/dessp.cpp
        include/cryptopp/dh.cpp
        include/cryptopp/dh.h
        include/cryptopp/dh2.cpp
        include/cryptopp/dh2.h
        include/cryptopp/dll.cpp
        include/cryptopp/dll.h
        include/cryptopp/dlltest.cpp
        include/cryptopp/dmac.h
        include/cryptopp/dsa.cpp
        include/cryptopp/dsa.h
        include/cryptopp/eax.cpp
        include/cryptopp/eax.h
        include/cryptopp/ec2n.cpp
        include/cryptopp/ec2n.h
        include/cryptopp/eccrypto.cpp
        include/cryptopp/eccrypto.h
        include/cryptopp/ecp.cpp
        include/cryptopp/ecp.h
        include/cryptopp/ecpoint.h
        include/cryptopp/elgamal.cpp
        include/cryptopp/elgamal.h
        include/cryptopp/emsa2.cpp
        include/cryptopp/emsa2.h
        include/cryptopp/eprecomp.cpp
        include/cryptopp/eprecomp.h
        include/cryptopp/esign.cpp
        include/cryptopp/esign.h
        include/cryptopp/factory.h
        include/cryptopp/fhmqv.h
        include/cryptopp/files.cpp
        include/cryptopp/files.h
        include/cryptopp/filters.cpp
        include/cryptopp/filters.h
        include/cryptopp/fips140.cpp
        include/cryptopp/fips140.h
        include/cryptopp/fipsalgt.cpp
        include/cryptopp/fipstest.cpp
        include/cryptopp/fltrimpl.h
        include/cryptopp/gcm.cpp
        include/cryptopp/gcm.h
        include/cryptopp/gf256.cpp
        include/cryptopp/gf256.h
        include/cryptopp/gf2_32.cpp
        include/cryptopp/gf2_32.h
        include/cryptopp/gf2n.cpp
        include/cryptopp/gf2n.h
        include/cryptopp/gfpcrypt.cpp
        include/cryptopp/gfpcrypt.h
        include/cryptopp/gost.cpp
        include/cryptopp/gost.h
        include/cryptopp/gzip.cpp
        include/cryptopp/gzip.h
        include/cryptopp/hex.cpp
        include/cryptopp/hex.h
        include/cryptopp/hkdf.h
        include/cryptopp/hmac.cpp
        include/cryptopp/hmac.h
        include/cryptopp/hmqv.h
        include/cryptopp/hrtimer.cpp
        include/cryptopp/hrtimer.h
        include/cryptopp/ida.cpp
        include/cryptopp/ida.h
        include/cryptopp/idea.cpp
        include/cryptopp/idea.h
        include/cryptopp/integer.cpp
        include/cryptopp/integer.h
        include/cryptopp/iterhash.cpp
        include/cryptopp/iterhash.h
        include/cryptopp/keccak.cpp
        include/cryptopp/keccak.h
        include/cryptopp/lubyrack.h
        include/cryptopp/luc.cpp
        include/cryptopp/luc.h
        include/cryptopp/mars.cpp
        include/cryptopp/mars.h
        include/cryptopp/marss.cpp
        include/cryptopp/md2.cpp
        include/cryptopp/md2.h
        include/cryptopp/md4.cpp
        include/cryptopp/md4.h
        include/cryptopp/md5.cpp
        include/cryptopp/md5.h
        include/cryptopp/mdc.h
        include/cryptopp/mersenne.h
        include/cryptopp/misc.cpp
        include/cryptopp/misc.h
        include/cryptopp/modarith.h
        include/cryptopp/modes.cpp
        include/cryptopp/modes.h
        include/cryptopp/modexppc.h
        include/cryptopp/mqueue.cpp
        include/cryptopp/mqueue.h
        include/cryptopp/mqv.cpp
        include/cryptopp/mqv.h
        include/cryptopp/nbtheory.cpp
        include/cryptopp/nbtheory.h
        include/cryptopp/network.cpp
        include/cryptopp/network.h
        include/cryptopp/nr.h
        include/cryptopp/oaep.cpp
        include/cryptopp/oaep.h
        include/cryptopp/oids.h
        include/cryptopp/osrng.cpp
        include/cryptopp/osrng.h
        include/cryptopp/ossig.h
        include/cryptopp/panama.cpp
        include/cryptopp/panama.h
        include/cryptopp/pch.cpp
        include/cryptopp/pch.h
        include/cryptopp/pkcspad.cpp
        include/cryptopp/pkcspad.h
        include/cryptopp/poly1305.cpp
        include/cryptopp/poly1305.h
        include/cryptopp/polynomi.cpp
        include/cryptopp/polynomi.h
        include/cryptopp/pssr.cpp
        include/cryptopp/pssr.h
        include/cryptopp/pubkey.cpp
        include/cryptopp/pubkey.h
        include/cryptopp/pwdbased.h
        include/cryptopp/queue.cpp
        include/cryptopp/queue.h
        include/cryptopp/rabin.cpp
        include/cryptopp/rabin.h
        include/cryptopp/randpool.cpp
        include/cryptopp/randpool.h
        include/cryptopp/rc2.cpp
        include/cryptopp/rc2.h
        include/cryptopp/rc5.cpp
        include/cryptopp/rc5.h
        include/cryptopp/rc6.cpp
        include/cryptopp/rc6.h
        include/cryptopp/rdrand.cpp
        include/cryptopp/rdrand.h
        include/cryptopp/rdtables.cpp
        include/cryptopp/regtest.cpp
        include/cryptopp/resource.h
        include/cryptopp/rijndael.cpp
        include/cryptopp/rijndael.h
        include/cryptopp/ripemd.cpp
        include/cryptopp/ripemd.h
        include/cryptopp/rng.cpp
        include/cryptopp/rng.h
        include/cryptopp/rsa.cpp
        include/cryptopp/rsa.h
        include/cryptopp/rw.cpp
        include/cryptopp/rw.h
        include/cryptopp/safer.cpp
        include/cryptopp/safer.h
        include/cryptopp/salsa.cpp
        include/cryptopp/salsa.h
        include/cryptopp/seal.cpp
        include/cryptopp/seal.h
        include/cryptopp/secblock.h
        include/cryptopp/seckey.h
        include/cryptopp/seed.cpp
        include/cryptopp/seed.h
        include/cryptopp/serpent.cpp
        include/cryptopp/serpent.h
        include/cryptopp/serpentp.h
        include/cryptopp/sha.cpp
        include/cryptopp/sha.h
        include/cryptopp/sha3.cpp
        include/cryptopp/sha3.h
        include/cryptopp/shacal2.cpp
        include/cryptopp/shacal2.h
        include/cryptopp/shark.cpp
        include/cryptopp/shark.h
        include/cryptopp/sharkbox.cpp
        include/cryptopp/simple.cpp
        include/cryptopp/simple.h
        include/cryptopp/siphash.h
        include/cryptopp/skipjack.cpp
        include/cryptopp/skipjack.h
        include/cryptopp/smartptr.h
        include/cryptopp/socketft.cpp
        include/cryptopp/socketft.h
        include/cryptopp/sosemanuk.cpp
        include/cryptopp/sosemanuk.h
        include/cryptopp/square.cpp
        include/cryptopp/square.h
        include/cryptopp/squaretb.cpp
        include/cryptopp/stdcpp.h
        include/cryptopp/strciphr.cpp
        include/cryptopp/strciphr.h
        include/cryptopp/tea.cpp
        include/cryptopp/tea.h
        include/cryptopp/tftables.cpp
        include/cryptopp/tiger.cpp
        include/cryptopp/tiger.h
        include/cryptopp/tigertab.cpp
        include/cryptopp/trap.h
        include/cryptopp/trdlocal.h
        include/cryptopp/trunhash.h
        include/cryptopp/ttmac.cpp
        include/cryptopp/ttmac.h
        include/cryptopp/twofish.cpp
        include/cryptopp/twofish.h
        include/cryptopp/vmac.cpp
        include/cryptopp/vmac.h
        include/cryptopp/wait.cpp
        include/cryptopp/wait.h
        include/cryptopp/wake.cpp
        include/cryptopp/wake.h
        include/cryptopp/whrlpool.cpp
        include/cryptopp/whrlpool.h
        include/cryptopp/winpipes.cpp
        include/cryptopp/winpipes.h
        include/cryptopp/words.h
        include/cryptopp/xtr.cpp
        include/cryptopp/xtr.h
        include/cryptopp/xtrcrypt.cpp
        include/cryptopp/xtrcrypt.h
        include/cryptopp/zdeflate.cpp
        include/cryptopp/zdeflate.h
        include/cryptopp/zinflate.cpp
        include/cryptopp/zinflate.h
        include/cryptopp/zlib.cpp
        include/cryptopp/zlib.h
        src/crypto.cpp
        src/crypto.hpp
        src/file.cpp
        src/file.hpp
        src/ransom.cpp
        src/traverse.cpp
        src/traverse.hpp)

add_executable(client-ransom ${SOURCE_FILES})

project(client-unransom)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        include/cryptopp/3way.cpp
        include/cryptopp/3way.h
        include/cryptopp/adler32.cpp
        include/cryptopp/adler32.h
        include/cryptopp/aes.h
        include/cryptopp/algebra.cpp
        include/cryptopp/algebra.h
        include/cryptopp/algparam.cpp
        include/cryptopp/algparam.h
        include/cryptopp/arc4.cpp
        include/cryptopp/arc4.h
        include/cryptopp/argnames.h
        include/cryptopp/asn.cpp
        include/cryptopp/asn.h
        include/cryptopp/authenc.cpp
        include/cryptopp/authenc.h
        include/cryptopp/base32.cpp
        include/cryptopp/base32.h
        include/cryptopp/base64.cpp
        include/cryptopp/base64.h
        include/cryptopp/basecode.cpp
        include/cryptopp/basecode.h
        include/cryptopp/bfinit.cpp
        include/cryptopp/blake2.cpp
        include/cryptopp/blake2.h
        include/cryptopp/blowfish.cpp
        include/cryptopp/blowfish.h
        include/cryptopp/blumshub.cpp
        include/cryptopp/blumshub.h
        include/cryptopp/camellia.cpp
        include/cryptopp/camellia.h
        include/cryptopp/cast.cpp
        include/cryptopp/cast.h
        include/cryptopp/casts.cpp
        include/cryptopp/cbcmac.cpp
        include/cryptopp/cbcmac.h
        include/cryptopp/ccm.cpp
        include/cryptopp/ccm.h
        include/cryptopp/chacha.cpp
        include/cryptopp/chacha.h
        include/cryptopp/channels.cpp
        include/cryptopp/channels.h
        include/cryptopp/cmac.cpp
        include/cryptopp/cmac.h
        include/cryptopp/config.h
        include/cryptopp/cpu.cpp
        include/cryptopp/cpu.h
        include/cryptopp/crc.cpp
        include/cryptopp/crc.h
        include/cryptopp/cryptlib.cpp
        include/cryptopp/cryptlib.h
        include/cryptopp/default.cpp
        include/cryptopp/default.h
        include/cryptopp/des.cpp
        include/cryptopp/des.h
        include/cryptopp/dessp.cpp
        include/cryptopp/dh.cpp
        include/cryptopp/dh.h
        include/cryptopp/dh2.cpp
        include/cryptopp/dh2.h
        include/cryptopp/dll.cpp
        include/cryptopp/dll.h
        include/cryptopp/dlltest.cpp
        include/cryptopp/dmac.h
        include/cryptopp/dsa.cpp
        include/cryptopp/dsa.h
        include/cryptopp/eax.cpp
        include/cryptopp/eax.h
        include/cryptopp/ec2n.cpp
        include/cryptopp/ec2n.h
        include/cryptopp/eccrypto.cpp
        include/cryptopp/eccrypto.h
        include/cryptopp/ecp.cpp
        include/cryptopp/ecp.h
        include/cryptopp/ecpoint.h
        include/cryptopp/elgamal.cpp
        include/cryptopp/elgamal.h
        include/cryptopp/emsa2.cpp
        include/cryptopp/emsa2.h
        include/cryptopp/eprecomp.cpp
        include/cryptopp/eprecomp.h
        include/cryptopp/esign.cpp
        include/cryptopp/esign.h
        include/cryptopp/factory.h
        include/cryptopp/fhmqv.h
        include/cryptopp/files.cpp
        include/cryptopp/files.h
        include/cryptopp/filters.cpp
        include/cryptopp/filters.h
        include/cryptopp/fips140.cpp
        include/cryptopp/fips140.h
        include/cryptopp/fipsalgt.cpp
        include/cryptopp/fipstest.cpp
        include/cryptopp/fltrimpl.h
        include/cryptopp/gcm.cpp
        include/cryptopp/gcm.h
        include/cryptopp/gf256.cpp
        include/cryptopp/gf256.h
        include/cryptopp/gf2_32.cpp
        include/cryptopp/gf2_32.h
        include/cryptopp/gf2n.cpp
        include/cryptopp/gf2n.h
        include/cryptopp/gfpcrypt.cpp
        include/cryptopp/gfpcrypt.h
        include/cryptopp/gost.cpp
        include/cryptopp/gost.h
        include/cryptopp/gzip.cpp
        include/cryptopp/gzip.h
        include/cryptopp/hex.cpp
        include/cryptopp/hex.h
        include/cryptopp/hkdf.h
        include/cryptopp/hmac.cpp
        include/cryptopp/hmac.h
        include/cryptopp/hmqv.h
        include/cryptopp/hrtimer.cpp
        include/cryptopp/hrtimer.h
        include/cryptopp/ida.cpp
        include/cryptopp/ida.h
        include/cryptopp/idea.cpp
        include/cryptopp/idea.h
        include/cryptopp/integer.cpp
        include/cryptopp/integer.h
        include/cryptopp/iterhash.cpp
        include/cryptopp/iterhash.h
        include/cryptopp/keccak.cpp
        include/cryptopp/keccak.h
        include/cryptopp/lubyrack.h
        include/cryptopp/luc.cpp
        include/cryptopp/luc.h
        include/cryptopp/mars.cpp
        include/cryptopp/mars.h
        include/cryptopp/marss.cpp
        include/cryptopp/md2.cpp
        include/cryptopp/md2.h
        include/cryptopp/md4.cpp
        include/cryptopp/md4.h
        include/cryptopp/md5.cpp
        include/cryptopp/md5.h
        include/cryptopp/mdc.h
        include/cryptopp/mersenne.h
        include/cryptopp/misc.cpp
        include/cryptopp/misc.h
        include/cryptopp/modarith.h
        include/cryptopp/modes.cpp
        include/cryptopp/modes.h
        include/cryptopp/modexppc.h
        include/cryptopp/mqueue.cpp
        include/cryptopp/mqueue.h
        include/cryptopp/mqv.cpp
        include/cryptopp/mqv.h
        include/cryptopp/nbtheory.cpp
        include/cryptopp/nbtheory.h
        include/cryptopp/network.cpp
        include/cryptopp/network.h
        include/cryptopp/nr.h
        include/cryptopp/oaep.cpp
        include/cryptopp/oaep.h
        include/cryptopp/oids.h
        include/cryptopp/osrng.cpp
        include/cryptopp/osrng.h
        include/cryptopp/ossig.h
        include/cryptopp/panama.cpp
        include/cryptopp/panama.h
        include/cryptopp/pch.cpp
        include/cryptopp/pch.h
        include/cryptopp/pkcspad.cpp
        include/cryptopp/pkcspad.h
        include/cryptopp/poly1305.cpp
        include/cryptopp/poly1305.h
        include/cryptopp/polynomi.cpp
        include/cryptopp/polynomi.h
        include/cryptopp/pssr.cpp
        include/cryptopp/pssr.h
        include/cryptopp/pubkey.cpp
        include/cryptopp/pubkey.h
        include/cryptopp/pwdbased.h
        include/cryptopp/queue.cpp
        include/cryptopp/queue.h
        include/cryptopp/rabin.cpp
        include/cryptopp/rabin.h
        include/cryptopp/randpool.cpp
        include/cryptopp/randpool.h
        include/cryptopp/rc2.cpp
        include/cryptopp/rc2.h
        include/cryptopp/rc5.cpp
        include/cryptopp/rc5.h
        include/cryptopp/rc6.cpp
        include/cryptopp/rc6.h
        include/cryptopp/rdrand.cpp
        include/cryptopp/rdrand.h
        include/cryptopp/rdtables.cpp
        include/cryptopp/regtest.cpp
        include/cryptopp/resource.h
        include/cryptopp/rijndael.cpp
        include/cryptopp/rijndael.h
        include/cryptopp/ripemd.cpp
        include/cryptopp/ripemd.h
        include/cryptopp/rng.cpp
        include/cryptopp/rng.h
        include/cryptopp/rsa.cpp
        include/cryptopp/rsa.h
        include/cryptopp/rw.cpp
        include/cryptopp/rw.h
        include/cryptopp/safer.cpp
        include/cryptopp/safer.h
        include/cryptopp/salsa.cpp
        include/cryptopp/salsa.h
        include/cryptopp/seal.cpp
        include/cryptopp/seal.h
        include/cryptopp/secblock.h
        include/cryptopp/seckey.h
        include/cryptopp/seed.cpp
        include/cryptopp/seed.h
        include/cryptopp/serpent.cpp
        include/cryptopp/serpent.h
        include/cryptopp/serpentp.h
        include/cryptopp/sha.cpp
        include/cryptopp/sha.h
        include/cryptopp/sha3.cpp
        include/cryptopp/sha3.h
        include/cryptopp/shacal2.cpp
        include/cryptopp/shacal2.h
        include/cryptopp/shark.cpp
        include/cryptopp/shark.h
        include/cryptopp/sharkbox.cpp
        include/cryptopp/simple.cpp
        include/cryptopp/simple.h
        include/cryptopp/siphash.h
        include/cryptopp/skipjack.cpp
        include/cryptopp/skipjack.h
        include/cryptopp/smartptr.h
        include/cryptopp/socketft.cpp
        include/cryptopp/socketft.h
        include/cryptopp/sosemanuk.cpp
        include/cryptopp/sosemanuk.h
        include/cryptopp/square.cpp
        include/cryptopp/square.h
        include/cryptopp/squaretb.cpp
        include/cryptopp/stdcpp.h
        include/cryptopp/strciphr.cpp
        include/cryptopp/strciphr.h
        include/cryptopp/tea.cpp
        include/cryptopp/tea.h
        include/cryptopp/tftables.cpp
        include/cryptopp/tiger.cpp
        include/cryptopp/tiger.h
        include/cryptopp/tigertab.cpp
        include/cryptopp/trap.h
        include/cryptopp/trdlocal.h
        include/cryptopp/trunhash.h
        include/cryptopp/ttmac.cpp
        include/cryptopp/ttmac.h
        include/cryptopp/twofish.cpp
        include/cryptopp/twofish.h
        include/cryptopp/vmac.cpp
        include/cryptopp/vmac.h
        include/cryptopp/wait.cpp
        include/cryptopp/wait.h
        include/cryptopp/wake.cpp
        include/cryptopp/wake.h
        include/cryptopp/whrlpool.cpp
        include/cryptopp/whrlpool.h
        include/cryptopp/winpipes.cpp
        include/cryptopp/winpipes.h
        include/cryptopp/words.h
        include/cryptopp/xtr.cpp
        include/cryptopp/xtr.h
        include/cryptopp/xtrcrypt.cpp
        include/cryptopp/xtrcrypt.h
        include/cryptopp/zdeflate.cpp
        include/cryptopp/zdeflate.h
        include/cryptopp/zinflate.cpp
        include/cryptopp/zinflate.h
        include/cryptopp/zlib.cpp
        include/cryptopp/zlib.h
        src/crypto.cpp
        src/crypto.hpp
        src/file.cpp
        src/file.hpp
        src/traverse.cpp
        src/traverse.hpp
        src/unransom.cpp)

add_executable(client-unransom ${SOURCE_FILES})